# python-sdk

docs/: research-agent.md
examples/research-agent/: pyproject.toml
examples/research-agent/mcp_research_agent/: __main__.py  server.py  visualization.py
